--- a/_quarto.yml
+++ b/_quarto.yml
@@ -23,6 +23,8 @@ website:
             text: Kapitel 2
           - href: Chapters/Chapter_3.qmd
             text: Kapitel 3
+          - href: Chapters/Chapter_4.qmd
+            text: Kapitel 4 
       - href: about.qmd
         icon: info-circle
         text: Über
