Update on chapter 5
Updated the table at the end of chapter 5

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 /.quarto/
 .Rproj.user
+Chapters/Grafiken/43. Was ist Rigging/Knochen.png
+Chapters/Grafiken/43. Was ist Rigging/Mesh eines Charakters.png
+Chapters/Grafiken/43. Was ist Rigging/Mesh eines Charakters2.png
+Chapters/Grafiken/43. Was ist Rigging/Mesh eines Charakters3.png
