--- a/_quarto.yml
+++ b/_quarto.yml
@@ -36,6 +36,8 @@ website:
             text: Kapitel 6
           - href: Chapters/Chapter_7.qmd
             text: Kapitel 7
+          - href: Chapters/Chapter_8.qmd
+            text: Kapitel 8
       - href: about.qmd
         icon: info-circle
         text: Über
