--- a/_quarto.yml
+++ b/_quarto.yml
@@ -40,6 +40,8 @@ website:
             text: Kapitel 8
           - href: Chapters/Chapter_9.qmd
             text: Kapitel 9
+          - href: Chapters/Chapter_10.qmd
+            text: Kapitel 10
       - href: about.qmd
         icon: info-circle
         text: Über
