--- a/_quarto.yml
+++ b/_quarto.yml
@@ -44,6 +44,8 @@ website:
             text: Kapitel 10
           - href: Chapters/Chapter_11.qmd
             text: Kapitel 11
+          - href: Chapters/Chapter_12.qmd
+            text: Kapitel 12            
       - href: about.qmd
         icon: info-circle
         text: Über
