--- a/_quarto.yml
+++ b/_quarto.yml
@@ -48,6 +48,8 @@ website:
             text: Kapitel 12
           - href: Chapters/Chapter_13.qmd
             text: Kapitel 13
+          - href: Chapters/Chapter_14.qmd
+            text: Kapitel 14
       - href: about.qmd
         icon: info-circle
         text: Über
