--- a/_quarto.yml
+++ b/_quarto.yml
@@ -54,6 +54,8 @@ website:
             text: Kapitel 15
           - href: Chapters/Chapter_16.qmd
             text: Kapitel 16
+          - href: Chapters/Chapter_17.qmd
+            text: Kapitel 17
       - href: about.qmd
         icon: info-circle
         text: Über
