--- a/_quarto.yml
+++ b/_quarto.yml
@@ -64,6 +64,8 @@ website:
             text: Kapitel 20
           - href: Chapters/Chapter_21.qmd
             text: Kapitel 21
+          - href: Chapters/Chapter_22.qmd
+            text: Kapitel 22
       - href: about.qmd
         icon: info-circle
         text: Über
