--- a/_quarto.yml
+++ b/_quarto.yml
@@ -70,6 +70,8 @@ website:
             text: Kapitel 23
           - href: Chapters/Chapter_24.qmd
             text: Kapitel 24
+          - href: Chapters/Chapter_25.qmd
+            text: Kapitel 25
       - href: about.qmd
         icon: info-circle
         text: Über
