--- a/_quarto.yml
+++ b/_quarto.yml
@@ -78,6 +78,8 @@ website:
             text: Kapitel 26
           - href: Chapters/Chapter_27.qmd
             text: Kapitel 27
+          - href: Chapters/Chapter_28.qmd
+            text: Kapitel 28
       - href: about.qmd
         icon: info-circle
         text: Über
