--- a/_quarto.yml
+++ b/_quarto.yml
@@ -80,6 +80,8 @@ website:
             text: Kapitel 27
           - href: Chapters/Chapter_28.qmd
             text: Kapitel 28
+          - href: Chapters/Chapter_29.qmd
+            text: Kapitel 29
       - href: about.qmd
         icon: info-circle
         text: Über
