--- a/_quarto.yml
+++ b/_quarto.yml
@@ -98,6 +98,8 @@ website:
             text: Kapitel 36
           - href: Chapters/Chapter_37.qmd
             text: Kapitel 37
+          - href: Chapters/Chapter_38.qmd
+            text: Kapitel 38           
       - href: about.qmd
         icon: info-circle
         text: Über
