--- a/_quarto.yml
+++ b/_quarto.yml
@@ -241,7 +241,7 @@ website:
               text: Kapitel 49
 format:
   html:
-    theme: [cosmos, styles.scss]
+    theme: [cosmos, assets/css/styles.scss]
     toc: true
     toc-title: Auf dieser Seite
     fontsize: 17px
